--- a/app/templates/painel.html
+++ b/app/templates/painel.html
@@ -13,8 +13,9 @@
             {% csrf_token %}
             <input class="form-control mt-4" type="text" name="user" id="user" placeholder="Nome do Usuário:">
             <input class="form-control mt-4" type="password" name="password" id="password" placeholder="Senha:">
-            <input class="btn btn-dark btn-lg active mt-4" type="submit" value="Entrar">
-            <a href="/" class="btn btn-primary btn-lg active mt-4" role="button" aria-pressed="true">Voltar</a>
+            <a href="/" class="btn btn-danger btn-lg active mt-4" role="button" aria-pressed="true">Voltar</a>
+            <input class="btn btn-success btn-lg active mt-4" type="submit" value="Entrar">
+
 
         </div>
     </form>
